# DecentralizedNetwork

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Koop.md  LICENSE  README.md  ROADMAP.md  SCOPE.md  Sprint_plan.md  VISION.md  docker-compose.yml  install.sh  lib.rs  message_history.rs  messagingroutes.rs
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/history/: ASSESSMENT.md  SCOPE.md
legacy/: build.rs  main.rs  messaging.rs  myipfs.rs  routes.rs  webrtc.rs
legacy/network/: mod.rs  state.rs
legacy/timecoin/: peer_id.rs  peer_manager.rs
network/: myipfs.rs  routes.rs
scripts/: relay-demo.sh
src/: api.rs  dag.rs  dashboard.html  identity.rs  invite.html  main.rs  network.rs
timecoin/: mod.rs  utils.rs
