[package]
name = "timecoin-node"
version = "0.1.0"
edition = "2021"
description = "Minimal decentralized P2P node with a DAG-based TimeCoin ledger, on upstream libp2p"
license = "MIT"

[[bin]]
name = "timecoin-node"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.56.0", features = [
    "tokio",
    "tcp",
    "quic",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "autonat",
    "upnp",
    "request-response",
    "cbor",
    "macros",
    "ed25519",
] }
tokio = { version = "1.45", features = ["full"] }
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.12", features = ["json"] }

[profile.release]
strip = true
